[tool.poetry]
name = "rctogether"
version = "0.2.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]

[dependencies]
python = "^3.8"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
