[tool.poetry]
name = "rctogether"
version = "0.3.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
websockets = "^9.1"
pytest-asyncio = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
