[tool.poetry]
name = "rctogether"
version = "0.3.3"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
websockets = "^10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.15.1"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
